--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
     "rxjs": "^6.0.0",
+    "stream": "0.0.2",
+    "timers": "^0.1.1",
+    "xml2js": "^0.4.19",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/xml2js": "^0.4.3",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
