--- a/package.json
+++ b/package.json
@@ -11,34 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.3",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
-    "@angular/core": "^6.1.3",
-    "@angular/forms": "^6.1.3",
-    "@angular/http": "^6.1.3",
-    "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
-    "@angular/router": "^6.1.3",
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@types/d3-selection-multi": "^1.0.6",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
+    "d3-selection-multi": "^1.0.1",
     "rxjs": "^6.0.0",
-    "stream": "0.0.2",
-    "timers": "^0.1.1",
-    "xml2js": "^0.4.19",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "~6.1.3",
-    "@angular/compiler-cli": "^6.1.3",
-    "@angular/language-service": "^6.1.3",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@types/d3": "^5.0.0",
+    "@types/d3-request": "^1.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "@types/xml2js": "^0.4.3",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,6 +49,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "typescript": "~2.7.2"
   }
 }
