--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^6.1.4",
     "@angular/platform-browser-dynamic": "^6.1.4",
     "@angular/router": "^6.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^3.1.0",
     "@types/d3-selection-multi": "^1.0.6",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
     "d3-selection-multi": "^1.0.1",
+    "ngx-highlightjs": "^2.1.1",
     "rxjs": "^6.0.0",
     "stream": "0.0.2",
     "timers": "^0.1.1",
