--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "7.0.2",
     "@angular/compiler-cli": "^6.1.6",
     "@angular/language-service": "^6.1.6",
     "@types/d3": "^5.0.0",
@@ -55,6 +55,8 @@
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "typescript": "~2.7.0",
+    "jquery": "3.0.0",
+    "popper.js": "1.14.3"
   }
 }
