--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.6",
-    "@angular/common": "^6.1.6",
-    "@angular/compiler": "^6.1.6",
-    "@angular/core": "^6.1.6",
-    "@angular/forms": "^6.1.6",
-    "@angular/http": "^6.1.6",
-    "@angular/platform-browser": "^6.1.6",
-    "@angular/platform-browser-dynamic": "^6.1.6",
-    "@angular/router": "^6.1.6",
-    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "@types/d3-selection-multi": "^1.0.6",
     "angular": "^1.7.5",
     "bootstrap": "^4.1.3",
@@ -30,33 +29,34 @@
     "rxjs": "^6.3.1",
     "stream": "0.0.2",
     "timers": "^0.1.1",
+    "tslib": "^1.9.0",
     "xml2js": "^0.4.19",
-    "zone.js": "^0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "7.0.2",
-    "@angular/compiler-cli": "^6.1.6",
-    "@angular/language-service": "^6.1.6",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.2",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@types/d3": "^5.0.0",
     "@types/d3-request": "^1.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "@types/xml2js": "^0.4.3",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "3.0.0",
     "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "popper.js": "1.14.3",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.0",
-    "jquery": "3.0.0",
-    "popper.js": "1.14.3"
+    "typescript": "~3.4.5"
   }
 }
