--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/animations": "^8.0.1",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "@types/d3-selection-multi": "^1.0.7",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.3",
     "d3": "^5.9.2",
     "d3-selection-multi": "^1.0.1",
+    "npm": "^6.9.0",
     "rxjs": "^6.3.1",
     "stream": "0.0.2",
     "timers": "^0.1.1",
@@ -33,10 +34,10 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "^8.0.2",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "~0.800.3",
+    "@angular/cli": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/language-service": "^8.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-request": "^1.0.5",
     "@types/jasmine": "~3.3.13",
